fix trip cards spacing

--- a/components/trip-card/styles.pcss
+++ b/components/trip-card/styles.pcss
@@ -38,6 +38,7 @@
         height: 100%;
         flex-flow: column nowrap;
         padding-top: space(16);
+        justify-content: space-between;
     }
 
     :where(.trip-card__heading) {
